--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -135,6 +135,7 @@ set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.175.8.45;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
+set_real_ip_from 138.68.147.31;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.164.38.67;
@@ -226,6 +227,7 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.128.200;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -925,6 +927,7 @@ set_real_ip_from 204.8.96.86;
 set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
+set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
 set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
@@ -1059,6 +1062,7 @@ set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
+set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:769:e559:5c8f:a3e9:aed1;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
@@ -1308,7 +1312,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:106:394::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
@@ -1808,7 +1812,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.101.10;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.110.29;
