--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,7 +101,6 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.172.84.107;
 allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -278,17 +277,7 @@ allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.126.115.146;
-allow 185.129.61.1;
-allow 185.129.61.10;
 allow 185.129.61.129;
-allow 185.129.61.2;
-allow 185.129.61.3;
-allow 185.129.61.4;
-allow 185.129.61.5;
-allow 185.129.61.6;
-allow 185.129.61.7;
-allow 185.129.61.8;
-allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.44.43;
@@ -795,16 +784,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:666::1;
-allow 2001:67c:89c:702:1ce:1ce:babe:1;
-allow 2001:67c:89c:702:1ce:1ce:babe:10;
-allow 2001:67c:89c:702:1ce:1ce:babe:2;
-allow 2001:67c:89c:702:1ce:1ce:babe:3;
-allow 2001:67c:89c:702:1ce:1ce:babe:4;
-allow 2001:67c:89c:702:1ce:1ce:babe:5;
-allow 2001:67c:89c:702:1ce:1ce:babe:6;
-allow 2001:67c:89c:702:1ce:1ce:babe:7;
-allow 2001:67c:89c:702:1ce:1ce:babe:8;
-allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::100;
 allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
@@ -1309,6 +1288,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1812,6 +1792,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1848,7 +1829,6 @@ allow 57.128.220.107;
 allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.171.137.169;
-allow 62.182.84.146;
 allow 64.190.76.10;
 allow 64.190.76.11;
 allow 64.190.76.12;
