--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -101,7 +101,6 @@ deny 108.59.12.3;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
-deny 109.172.84.107;
 deny 109.228.160.190;
 deny 109.69.67.17;
 deny 109.70.100.1;
@@ -278,17 +277,7 @@ deny 185.113.128.30;
 deny 185.120.16.171;
 deny 185.120.16.176;
 deny 185.126.115.146;
-deny 185.129.61.1;
-deny 185.129.61.10;
 deny 185.129.61.129;
-deny 185.129.61.2;
-deny 185.129.61.3;
-deny 185.129.61.4;
-deny 185.129.61.5;
-deny 185.129.61.6;
-deny 185.129.61.7;
-deny 185.129.61.8;
-deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.44.43;
@@ -795,16 +784,6 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:6ec:203:218:33ff:fe44:5528;
 deny 2001:67c:89c:666::1;
-deny 2001:67c:89c:702:1ce:1ce:babe:1;
-deny 2001:67c:89c:702:1ce:1ce:babe:10;
-deny 2001:67c:89c:702:1ce:1ce:babe:2;
-deny 2001:67c:89c:702:1ce:1ce:babe:3;
-deny 2001:67c:89c:702:1ce:1ce:babe:4;
-deny 2001:67c:89c:702:1ce:1ce:babe:5;
-deny 2001:67c:89c:702:1ce:1ce:babe:6;
-deny 2001:67c:89c:702:1ce:1ce:babe:7;
-deny 2001:67c:89c:702:1ce:1ce:babe:8;
-deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:67c:e28:1::100;
 deny 2001:67c:e28:1::101;
 deny 2001:67c:e28:1::102;
@@ -1309,6 +1288,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1812,6 +1792,7 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1848,7 +1829,6 @@ deny 57.128.220.107;
 deny 62.133.45.2;
 deny 62.133.63.146;
 deny 62.171.137.169;
-deny 62.182.84.146;
 deny 64.190.76.10;
 deny 64.190.76.11;
 deny 64.190.76.12;
