--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -85,16 +85,6 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:6ec:203:218:33ff:fe44:5528;
 deny 2001:67c:89c:666::1;
-deny 2001:67c:89c:702:1ce:1ce:babe:1;
-deny 2001:67c:89c:702:1ce:1ce:babe:10;
-deny 2001:67c:89c:702:1ce:1ce:babe:2;
-deny 2001:67c:89c:702:1ce:1ce:babe:3;
-deny 2001:67c:89c:702:1ce:1ce:babe:4;
-deny 2001:67c:89c:702:1ce:1ce:babe:5;
-deny 2001:67c:89c:702:1ce:1ce:babe:6;
-deny 2001:67c:89c:702:1ce:1ce:babe:7;
-deny 2001:67c:89c:702:1ce:1ce:babe:8;
-deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:67c:e28:1::100;
 deny 2001:67c:e28:1::101;
 deny 2001:67c:e28:1::102;
@@ -403,6 +393,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
