--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -101,7 +101,6 @@ set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
-set_real_ip_from 109.172.84.107;
 set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -278,17 +277,7 @@ set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
 set_real_ip_from 185.126.115.146;
-set_real_ip_from 185.129.61.1;
-set_real_ip_from 185.129.61.10;
 set_real_ip_from 185.129.61.129;
-set_real_ip_from 185.129.61.2;
-set_real_ip_from 185.129.61.3;
-set_real_ip_from 185.129.61.4;
-set_real_ip_from 185.129.61.5;
-set_real_ip_from 185.129.61.6;
-set_real_ip_from 185.129.61.7;
-set_real_ip_from 185.129.61.8;
-set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.44.43;
@@ -795,16 +784,6 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
 set_real_ip_from 2001:67c:89c:666::1;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:4;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:5;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:67c:e28:1::100;
 set_real_ip_from 2001:67c:e28:1::101;
 set_real_ip_from 2001:67c:e28:1::102;
@@ -1309,6 +1288,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1812,6 +1792,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1848,7 +1829,6 @@ set_real_ip_from 57.128.220.107;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.63.146;
 set_real_ip_from 62.171.137.169;
-set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.190.76.10;
 set_real_ip_from 64.190.76.11;
 set_real_ip_from 64.190.76.12;
