--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -85,16 +85,6 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
 set_real_ip_from 2001:67c:89c:666::1;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:4;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:5;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:67c:e28:1::100;
 set_real_ip_from 2001:67c:e28:1::101;
 set_real_ip_from 2001:67c:e28:1::102;
@@ -403,6 +393,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
